--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,6 @@ build:
       /kaniko/executor
       --context "${CI_PROJECT_DIR}/docker_container"
       --dockerfile "${CI_PROJECT_DIR}/docker_container/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}/Test:1.0"
+      --destination "${CI_REGISTRY_IMAGE}:BLA"
   # rules:
   #   - if: $CI_COMMIT_TAG
