First try with CI

--- a/docker_container/Dockerfile
+++ b/docker_container/Dockerfile
@@ -32,9 +32,10 @@ RUN apt-get update -y
 
 RUN if [ ${ubuntu_packages} ]; then \
     for item in ${ubuntu_packages}; do \
-    apt-get install -y ${item} \
-    done; \
+    apt-get install -y ${item}; \
+    done \
     fi
+
 
 # ────────────────────────────────── <end> ─────────────────────────────────── #
 
