--- a/docker_container/Dockerfile
+++ b/docker_container/Dockerfile
@@ -43,8 +43,9 @@ RUN if [ -n ${ubuntu_packages} ]; then \
 
 # ============================== > R packages < ============================== #
 RUN if [ -n ${r_packages} ]; then \ 
-    printf "\n\t - %s" ${r_packages}; \
-    Rscript /install_missing_packages.R ${r_packages}; \
+    echo "Attempting to install:"; \
+    printf "\t - %s\n" ${r_packages}; \
+    Rscript /install_missing_packages.R ${r_packages} > /install_missing_packages.log 2>&1; \
     fi
 # "data.table"\
 # "units"\
