First try with CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ build:
       mkdir -p /kaniko/.docker
       echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 -w 0)\"}}}" > /kaniko/.docker/config.json
     - >-
-      ubuntu_packages=$(cat ubuntu_packages)
+      export ubuntu_packages=$(cat ${CI_PROJECT_DIR}/ubuntu_packages)
       echo "ubuntu_packages: $ubuntu_packages"
     - >-
       /kaniko/executor
