First try with CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,6 @@ build:
       --context "${CI_PROJECT_DIR}/docker_container"
       --dockerfile "${CI_PROJECT_DIR}/docker_container/Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}:BLA"
-      --build-args "ubuntu_packages=${ubuntu_packages}"
+      --build-arg="ubuntu_packages"="${ubuntu_packages}"
   # rules:
   #   - if: $CI_COMMIT_TAG
