--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,11 +9,11 @@ build:
     entrypoint: [""]
   script:
     - >-
-      mkdir -p /kaniko/.docker
+      mkdir -p /kaniko/.docker;
       echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 -w 0)\"}}}" > /kaniko/.docker/config.json
     - >- 
-      echo "REG: ${CI_REGISTRY}"
-      export ubuntu_packages=$(cat ${CI_PROJECT_DIR}/ubuntu_packages)
+      echo "REG: ${CI_REGISTRY}";
+      export ubuntu_packages=$(cat ${CI_PROJECT_DIR}/ubuntu_packages);
       echo "ubuntu_packages: ${ubuntu_packages}"
     - >-
       /kaniko/executor
