--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,16 +10,16 @@ build:
   script:
     - >-
       mkdir -p /kaniko/.docker;
-      echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 -w 0)\"}}}" > /kaniko/.docker/config.json
-    - >- 
-      echo "REG: ${CI_REGISTRY}";
-      export ubuntu_packages=$(cat ${CI_PROJECT_DIR}/ubuntu_packages);
-      echo "ubuntu_packages: ${ubuntu_packages}"
+      echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 -w 0)\"}}}" > /kaniko/.docker/config.json;
+      cd ${CI_PROJECT_DIR}
+      export ubuntu_packages=$(cat ./ubuntu_packages);
+      export r_packages=$(cat ./r_packages);
     - >-
       /kaniko/executor
-      --context "${CI_PROJECT_DIR}/docker_container"
-      --dockerfile "${CI_PROJECT_DIR}/docker_container/Dockerfile"
+      --context "./docker_container"
+      --dockerfile "./docker_container/Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}:BLA"
       --build-arg="ubuntu_packages"="${ubuntu_packages}"
+      --build-arg="r_packages"="${r_packages}"
   # rules:
   #   - if: $CI_COMMIT_TAG
