First try with CI

--- a/docker_container/Dockerfile
+++ b/docker_container/Dockerfile
@@ -35,7 +35,7 @@ COPY /container_setup/R/Makevars /.R/
 # =========================== > Ubuntu Packages < ============================ #
 
 
-RUN if [ -n ${ubuntu_packages} ]; then \
+RUN if [ -n "${ubuntu_packages}" ]; then \
     apt-get update -y && \
     apt-get install -y ${ubuntu_packages}; \
     fi
@@ -45,7 +45,7 @@ RUN if [ -n ${ubuntu_packages} ]; then \
 
 
 # ============================== > R packages < ============================== #
-RUN if [ -n ${r_packages} ]; then \ 
+RUN if [ -n "${r_packages}" ]; then \ 
     echo "Attempting to install:"; \
     printf "\t - %s\n" ${r_packages}; \
     Rscript /install_missing_packages.R ${r_packages} > /install_missing_packages.log; \
