First try with CI

--- a/docker_container/Dockerfile
+++ b/docker_container/Dockerfile
@@ -34,17 +34,19 @@ COPY /container_setup/R/Makevars /.R/
 
 # =========================== > Ubuntu Packages < ============================ #
 
+echo "Attempting to install ubuntu_packages:"
+printf "\t - %s\n" ${ubuntu_packages}
 
 RUN if [ -n "${ubuntu_packages}" ]; then \
     apt-get update -y && \
     apt-get install -y ${ubuntu_packages}; \
     fi
 
-RUN if [ -n "${ubuntu_packages}" ]; then \
-    for item in ${ubuntu_packages}; do \
-    echo $item; \
-    done; \
-    fi
+# RUN if [ -n "${ubuntu_packages}" ]; then \
+#     for item in ${ubuntu_packages}; do \
+#     echo $item; \
+#     done; \
+#     fi
 
 
 # ────────────────────────────────── <end> ─────────────────────────────────── #
