--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build:
       --context "./docker_container"
       --dockerfile "./docker_container/Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}:BLA"
-      --build-arg="ubuntu_packages"="${ubuntu_packages}"
-      --build-arg="r_packages"="${r_packages}"
+      --build-arg "ubuntu_packages"="${ubuntu_packages}"
+      --build-arg "r_packages"="${r_packages}"
   # rules:
   #   - if: $CI_COMMIT_TAG
