--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build:
     - >-
       mkdir -p /kaniko/.docker;
       echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 -w 0)\"}}}" > /kaniko/.docker/config.json;
-      cd ${CI_PROJECT_DIR}
+      cd ${CI_PROJECT_DIR};
       export ubuntu_packages=$(cat ./ubuntu_packages);
       export r_packages=$(cat ./r_packages);
     - >-
@@ -20,7 +20,6 @@ build:
       --dockerfile "./docker_container/Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}:BLA"
       --build-arg "ubuntu_packages"="${ubuntu_packages}"
-
-  # --build-arg "r_packages"="${r_packages}"
+      --build-arg "r_packages"="${r_packages}"
   # rules:
   #   - if: $CI_COMMIT_TAG
