--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,15 +11,15 @@ build:
     - >-
       mkdir -p /kaniko/.docker;
       echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 -w 0)\"}}}" > /kaniko/.docker/config.json;
-      cd ${CI_PROJECT_DIR};
-      export ubuntu_packages=$(cat ./ubuntu_packages);
-      export r_packages=$(cat ./r_packages);
+      cd ${CI_PROJECT_DIR}
     - >-
       /kaniko/executor
       --context "./docker_container"
       --dockerfile "./docker_container/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}:1.0"
+      --destination "${CI_REGISTRY_IMAGE}:oOo"
       --build-arg "ubuntu_packages"="${ubuntu_packages}"
       --build-arg "r_packages"="${r_packages}"
   # rules:
   #   - if: $CI_COMMIT_TAG
+      # export ubuntu_packages=$(cat ./ubuntu_packages);
+      # export r_packages=$(cat ./r_packages);
