--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,9 +16,10 @@ build:
       /kaniko/executor
       --context "./docker_container"
       --dockerfile "./docker_container/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}:oOo"
-      --build-arg "ubuntu_packages"="${ubuntu_packages}"
-      --build-arg "r_packages"="${r_packages}"
+      --destination "${CI_REGISTRY_IMAGE}"
+
+  # --build-arg "ubuntu_packages"="${ubuntu_packages}"
+    # --build-arg "r_packages"="${r_packages}"
   # rules:
   #   - if: $CI_COMMIT_TAG
       # export ubuntu_packages=$(cat ./ubuntu_packages);
