--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build:
       /kaniko/executor
       --context "./docker_container"
       --dockerfile "./docker_container/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}"
+      --destination "${CI_REGISTRY_IMAGE}:xyz"
 
   # --build-arg "ubuntu_packages"="${ubuntu_packages}"
     # --build-arg "r_packages"="${r_packages}"
