--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,16 +10,17 @@ build:
   script:
     - >-
       mkdir -p /kaniko/.docker;
-      echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "oauth2" "glpat-mf6XzgTC1o-fPPwx8VH3" | base64 -w 0)\"}}}" > /kaniko/.docker/config.json;
-      cd ${CI_PROJECT_DIR};
-      export ubuntu_packages=$(cat ./ubuntu_packages);
-      export r_packages=$(cat ./r_packages);
+      echo "{\"auths\":{\"${CI_REGISTRY}\":{\"oauth2\":\"$(printf "%s" "glpat-mf6XzgTC1o-fPPwx8VH3" | base64 -w 0)\"}}}" > /kaniko/.docker/config.json;
+      cd ${CI_PROJECT_DIR}
     - >-
       /kaniko/executor
       --context "./docker_container"
       --dockerfile "./docker_container/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}:BLA"
-      --build-arg "ubuntu_packages"="${ubuntu_packages}"
-      --build-arg "r_packages"="${r_packages}"
+      --destination "${CI_REGISTRY_IMAGE}:oOo"
+
+  # --build-arg "ubuntu_packages"="${ubuntu_packages}"
+    # --build-arg "r_packages"="${r_packages}"
   # rules:
   #   - if: $CI_COMMIT_TAG
+      # export ubuntu_packages=$(cat ./ubuntu_packages);
+      # export r_packages=$(cat ./r_packages);
