--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build:
       /kaniko/executor
       --context "./docker_container"
       --dockerfile "./docker_container/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}:kaniko"
+      --destination "${CI_REGISTRY_IMAGE}"
       --build-arg "ubuntu_packages"="${ubuntu_packages}"
       --build-arg "r_packages"="${r_packages}"
       --skip-push-permission-check
