--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,10 +23,9 @@ build:
       /kaniko/executor
       --context "./docker_container"
       --dockerfile "./docker_container/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}"
+      --destination "${CI_REGISTRY_IMAGE}:sometag"
       --build-arg "ubuntu_packages"="${ubuntu_packages}"
       --build-arg "r_packages"="${r_packages}"
-      --skip-push-permission-check
   # rules:
   #   - if: $CI_COMMIT_TAG
       # export ubuntu_packages=$(cat ./ubuntu_packages);
