--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build:
       echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 -w 0)\"}}}" > /kaniko/.docker/config.json;
       cd ${CI_PROJECT_DIR};
       echo "----------------------------------------------------------------------";
-      echo "CI_REGISTRY: ${CI_REGISTRY}";
+      echo "CI_REGISTRY: ${CI_REGISTRY} <";
       echo "CI_REGISTRY_USER: ${CI_REGISTRY_USER}";
       echo "CI_REGISTRY_PASSWORD: ${CI_REGISTRY_PASSWORD}";
       echo "CI_PROJECT_DIR: ${CI_PROJECT_DIR}";
