--- a/docker_container/Dockerfile
+++ b/docker_container/Dockerfile
@@ -55,9 +55,9 @@ RUN if [ -n "${ubuntu_packages}" ]; then \
 RUN if [ -n "${r_packages}" ]; then \ 
     echo "Attempting to install r_packages:"; \
     printf "\t - %s\n" ${r_packages}; \
-    Rscript /install_missing_packages.R ${r_packages} > r_packages.log 2>&1 && \
+    r_pkg_log="$(Rscript /install_missing_packages.R ${r_packages})" && \
     echo "... successful!" || \
-    (sed -i 's/^/\t/' r_packages.log && cat r_packages.log); \
+    (sed 's/^/\t/' <<< "${r_pkg_log}" && cat ${r_pkg_log}); 
     fi
 # "data.table"\
 # "units"\
