--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,6 @@ build:
       mkdir -p /kaniko/.docker;
       echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 -w 0)\"}}}" > /kaniko/.docker/config.json;
       cd ${CI_PROJECT_DIR};
-      export ubuntu_packages=$(cat requirements/Ubuntu);
-      export r_packages=$(cat requirements/R);
     - >-
       /kaniko/executor
       --context "./"
@@ -23,3 +21,5 @@ build:
       --build-arg "r_packages"="${r_packages}"
   # rules:
   #   - if: $CI_COMMIT_TAG
+        # export ubuntu_packages=$(cat requirements/Ubuntu);
+      # export r_packages=$(cat requirements/R);
