--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,10 +10,19 @@ build:
   script:
     - >-
       mkdir -p /kaniko/.docker;
-      echo "{\"auths\":{\"${CI_REGISTRY}/containr\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 -w 0)\"}}}" > /kaniko/.docker/config.json;
+      printf "{
+          \"auths\": 
+              {
+                  \"${CI_REGISTRY}\": { 
+                      \"auth\": \"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 -w 0)\"
+                  }
+              }
+      }" \
+      > /kaniko/.docker/config.json;
       cd ${CI_PROJECT_DIR};
       export ubuntu_packages=$(cat requirements/Ubuntu);
       export r_packages=$(cat requirements/R);
+      cat /kaniko/.docker/config.json;
     - >-
       /kaniko/executor
       --context "./"
