--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,6 @@ build:
       /kaniko/executor
       --context "./"
       --dockerfile "./Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}:sometag"
+      --destination "${CI_REGISTRY_IMAGE}"
       --build-arg "ubuntu_packages"="${ubuntu_packages}"
       --build-arg "r_packages"="${r_packages}"
-  # rules:
-  #   - if: $CI_COMMIT_TAG
