--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,9 @@ stages:
 
 build:
   stage: build
+  tags:
+    - css
+    - largedisk
   image:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
