--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,8 +31,8 @@ r-container-build:
       > /kaniko/.docker/config.json
     - >-
       cd ${CI_PROJECT_DIR};
-      export ubuntu_packages=$(cat requirements/Ubuntu);
-      export r_packages=$(cat requirements/R)
+      export ubuntu_packages=$(cat dependencies/Ubuntu);
+      export r_packages=$(cat dependencies/R)
     - >-
       /kaniko/executor
       --context "./"
