Dirs as envir variables

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,4 +41,4 @@ r-container-build:
       --destination "${CI_REGISTRY_IMAGE}/$(echo ${r_version} | sed 's/.*\///')"
       --build-arg "r_version"="${r_version}"
       --build-arg "ubuntu_packages"="${ubuntu_packages}"
-      --build-arg "r_packages"="${r_packages}"
+      # --build-arg "r_packages"="${r_packages}"
