--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ r-container-build:
           - R/*
           - Dockerfile
           - .gitlab-ci.yml
-          - .entrypoint.sh
+          - /containr_scripts/entrypoint
   script:
     - >-
       mkdir -p /kaniko/.docker;
