Dirs as env file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,3 +42,5 @@ r-container-build:
       --build-arg "r_version"="${r_version}"
       --build-arg "ubuntu_packages"="${ubuntu_packages}"
       --build-arg "r_packages"=""
+      --build-arg "workdir"="/${CI_PROJECT_TITLE}/"
+      --build-arg "outdir"="/${CI_PROJECT_TITLE}_output/"
