--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,21 +18,31 @@ r-container-build:
           - .gitlab-ci.yml
           - containr_scripts/entrypoint
   script:
+    # Set folders
+    - cd "${CI_PROJECT_DIR}" && mkdir -p /kaniko/.docker;
+    # Set Credentials
     - >-
-      mkdir -p /kaniko/.docker;
       printf "{
-          \"auths\": 
-              {
-                  \"${CI_REGISTRY}\": { 
-                      \"auth\": \"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 -w 0)\"
-                  }
-              }
+        \"auths\": 
+        {
+        \"${CI_REGISTRY}\":
+          { 
+            \"auth\": 
+              \"$(
+              printf "%s:%s" \
+                "${CI_REGISTRY_USER}" \
+                "${CI_REGISTRY_PASSWORD}" | \
+              base64 -w 0
+              )\"
+          }
+        }
       }" \
-      > /kaniko/.docker/config.json
-    - >-
-      cd ${CI_PROJECT_DIR};
-      export ubuntu_packages=$(cat dependencies/Ubuntu);
-      export r_packages=$(cat dependencies/R)
+      > /kaniko/.docker/config.json;
+    # Export package lists
+    - >- 
+      export ubuntu_packages=$(cat R-Code/env/dependencies/Ubuntu 2>/dev/null || return 0);
+      export r_packages=$(cat R-Code/env/dependencies/R 2>/dev/null || return 0);
+    # Build the container
     - >-
       /kaniko/executor
       --context "./"
