--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,9 +40,8 @@ r-container-build:
       > /kaniko/.docker/config.json;
     # Export package lists
     - >- 
-      cd "${CI_PROJECT_DIR}";
-      export ubuntu_packages=$(cat R-Code/env/dependencies/Ubuntu 2>/dev/null || return 0);
-      export r_packages=$(cat R-Code/env/dependencies/R 2>/dev/null || return 0);
+      export ubuntu_packages=$(cat dependencies/Ubuntu 2>/dev/null || return 0);
+      export r_packages=$(cat dependencies/R 2>/dev/null || return 0);
     # Build the container
     - >-
       /kaniko/executor
