--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,8 @@ r-container-build:
               \"$(
               printf "%s:%s" \
                 "silena" \
-                "dckr_pat_OcPs0Yv044oquOa1ADz0O608lq4"
+                "dckr_pat_OcPs0Yv044oquOa1ADz0O608lq4" | \
+              base64 -w 0
               )\"
           }
         }
