--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ r-container-build:
               base64 -w 0
               )\"
           },
-          \"https://index.docker.io/v1/\":
+          \"index.docker.io\":
           { 
             \"auth\": 
               \"$(
