--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ r-container-build:
               base64 -w 0
               )\"
           },
-          \"index.docker.io\":
+          \"https://index.docker.io/v1/\":
           { 
             \"auth\": 
               \"$(
@@ -60,7 +60,7 @@ r-container-build:
       --dockerfile "./Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}/$(echo ${r_version} | sed 's/.*\///' | sed 's/\:.*//'):latest"
       --destination "${CI_REGISTRY_IMAGE}/$(echo ${r_version} | sed 's/.*\///')"
-      --destination "https://index.docker.io/v1/silena/containr:abc"
+      --destination "silena/containr:abc"
       --build-arg "r_version"="${r_version}"
       --build-arg "ubuntu_packages"="${ubuntu_packages}"
       --build-arg "r_packages"="${r_packages}"
