--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,8 +60,8 @@ r-container-build:
       --dockerfile "./Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}/$(echo ${r_version} | sed 's/.*\///' | sed 's/\:.*//'):latest"
       --destination "${CI_REGISTRY_IMAGE}/$(echo ${r_version} | sed 's/.*\///')"
-      --destination "silena/containr/$(echo ${r_version} | sed 's/.*\///' | sed 's/\:/_/')"
-      --destination "silena/containr/$(echo ${r_version} | sed 's/.*\///' | sed 's/\:.*//')_latest"
+      --destination "silena/containr:$(echo ${r_version} | sed 's/.*\///' | sed 's/\:/_/')"
+      --destination "silena/containr:$(echo ${r_version} | sed 's/.*\///' | sed 's/\:.*//')_latest"
       --build-arg "r_version"="${r_version}"
       --build-arg "ubuntu_packages"="${ubuntu_packages}"
       --build-arg "r_packages"="${r_packages}"
