Added github repo & push to dockerhub

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ r-container-build:
               \"$(
               printf "%s:%s" \
                 "silena" \
-                "dckr_pat_OcPs0Yv044oquOa1ADz0O608lq4" | \
+                "dckr_pat_IRoHDHdge2nSWXZSzB05Qf9V3YU" | \
               base64 -w 0
               )\"
           }
@@ -60,8 +60,8 @@ r-container-build:
       --dockerfile "./Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}/$(echo ${r_version} | sed 's/.*\///' | sed 's/\:.*//'):latest"
       --destination "${CI_REGISTRY_IMAGE}/$(echo ${r_version} | sed 's/.*\///')"
-      --destination "silena/containr:$(echo ${r_version} | sed 's/.*\///' | sed 's/\:/_/')"
-      --destination "silena/containr:$(echo ${r_version} | sed 's/.*\///' | sed 's/\:.*//')_latest"
+      --destination "simonlenau/containr:$(echo ${r_version} | sed 's/.*\///' | sed 's/\:/_/')"
+      --destination "simonlenau/containr:$(echo ${r_version} | sed 's/.*\///' | sed 's/\:.*//')_latest"
       --build-arg "r_version"="${r_version}"
       --build-arg "ubuntu_packages"="${ubuntu_packages}"
       --build-arg "r_packages"="${r_packages}"
