--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,20 +56,17 @@ r-container-build:
     - >-
       export image_name="$(echo ${FROM_IMAGE} | sed 's/.*\///' | sed 's/\:.*$//')";
       export image_vers="$(echo ${FROM_IMAGE} | sed 's/.*\///' | sed 's/^.*\:\(.*\)$/\1/')";
+    # Build the container
     - >-
-      echo "image_name: ${image_name} <";
-      echo "image_vers: ${image_vers} <";
-    # # Build the container
-    # - >-
-    #   /kaniko/executor
-    #   --context "./"
-    #   --dockerfile "./Dockerfile"
-    #   --destination "${CI_REGISTRY_IMAGE}/$(echo ${r_version} | sed 's/.*\///' | sed 's/\:.*//'):latest"
-    #   --destination "${CI_REGISTRY_IMAGE}/$(echo ${r_version} | sed 's/.*\///')"
-    #   --destination "simonlenau/containr:$(echo ${r_version} | sed 's/.*\///' | sed 's/\:/_/')"
-    #   --destination "simonlenau/containr:$(echo ${r_version} | sed 's/.*\///' | sed 's/\:.*//')_latest"
-    #   --build-arg "r_version"="${FROM_IMAGE}"
-    #   --build-arg "ubuntu_packages"="${ubuntu_packages}"
-    #   --build-arg "r_packages"="${r_packages}"
-    #   --build-arg "workdir"="/${CI_PROJECT_TITLE}/"
-    #   --build-arg "outdir"="/${CI_PROJECT_TITLE}_output/"
+      /kaniko/executor
+      --context "./"
+      --dockerfile "./Dockerfile"
+      --destination "${CI_REGISTRY_IMAGE}/${image_name}:latest"
+      --destination "${CI_REGISTRY_IMAGE}/${image_name}:${image_vers}"
+      --destination "simonlenau/containr:${image_vers}"
+      --destination "simonlenau/containr:latest"
+      --build-arg "r_version"="${FROM_IMAGE}"
+      --build-arg "ubuntu_packages"="${ubuntu_packages}"
+      --build-arg "r_packages"="${r_packages}"
+      --build-arg "workdir"="/${CI_PROJECT_TITLE}/"
+      --build-arg "outdir"="/${CI_PROJECT_TITLE}_output/"
