--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,8 +63,8 @@ r-container-build:
       --dockerfile "./Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}/${image_name}:latest"
       --destination "${CI_REGISTRY_IMAGE}/${image_name}:${image_vers}"
-      --destination "simonlenau/containr:${image_vers}"
-      --destination "simonlenau/containr:latest"
+      --destination "simonlenau/containr:${image_name}_latest"
+      --destination "simonlenau/containr:${image_name}_${image_ver}"
       --build-arg "r_version"="${FROM_IMAGE}"
       --build-arg "ubuntu_packages"="${ubuntu_packages}"
       --build-arg "r_packages"="${r_packages}"
