--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,17 +56,21 @@ r-container-build:
     - >-
       export image_name="$(echo ${FROM_IMAGE} | sed 's/.*\///' | sed 's/\:.*$//')";
       export image_vers="$(echo ${FROM_IMAGE} | sed 's/.*\///' | sed 's/^.*\:\(.*\)$/\1/')";
-    # Build the container
     - >-
-      /kaniko/executor
-      --context "./"
-      --dockerfile "./Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}/${image_name}:latest"
-      --destination "${CI_REGISTRY_IMAGE}/${image_name}:${image_vers}"
-      --destination "simonlenau/containr:${image_name}_latest"
-      --destination "simonlenau/containr:${image_name}_${image_ver}"
-      --build-arg "r_version"="${FROM_IMAGE}"
-      --build-arg "ubuntu_packages"="${ubuntu_packages}"
-      --build-arg "r_packages"="${r_packages}"
-      --build-arg "workdir"="/${CI_PROJECT_TITLE}/"
-      --build-arg "outdir"="/${CI_PROJECT_TITLE}_output/"
+      echo "FROM_IMAGE: $FROM_IMAGE";
+      echo "image_name: $image_name";
+      echo "image_tag: $image_tag";
+    # # Build the container
+    # - >-
+    #   /kaniko/executor
+    #   --context "./"
+    #   --dockerfile "./Dockerfile"
+    #   --destination "${CI_REGISTRY_IMAGE}/${image_name}:latest"
+    #   --destination "${CI_REGISTRY_IMAGE}/${image_name}:${image_vers}"
+    #   --destination "simonlenau/containr:${image_name}_latest"
+    #   --destination "simonlenau/containr:${image_name}_${image_ver}"
+    #   --build-arg "r_version"="${FROM_IMAGE}"
+    #   --build-arg "ubuntu_packages"="${ubuntu_packages}"
+    #   --build-arg "r_packages"="${r_packages}"
+    #   --build-arg "workdir"="/${CI_PROJECT_TITLE}/"
+    #   --build-arg "outdir"="/${CI_PROJECT_TITLE}_output/"
