--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,10 +64,11 @@ r-container-build:
       --dockerfile "./Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}:latest"
       --destination "${CI_REGISTRY_IMAGE}:${image_vers}"
-      --destination "index.docker.io/simonlenau/containr:latest"
-      --destination "index.docker.io/simonlenau/containr:${image_vers}"
       --build-arg "r_version"="${FROM_IMAGE}"
       --build-arg "ubuntu_packages"="${ubuntu_packages}"
       --build-arg "r_packages"="${r_packages}"
       --build-arg "workdir"="/${CI_PROJECT_TITLE}/"
       --build-arg "outdir"="/${CI_PROJECT_TITLE}_output/"
+
+# --destination "index.docker.io/simonlenau/containr:latest"
+# --destination "index.docker.io/simonlenau/containr:${image_vers}"
